fix the code to exclude entries that has invalid race or class input

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -23,11 +23,11 @@
     "import os           \n",
     "\n",
     "write_data_loc = 'Data/wowah/output/'      \n",
-    "write_data_file = 'wowah_data.csv'\n",
+    "write_data_file = 'wowah_data2.csv'\n",
     "write_data_filename = write_data_loc + write_data_file\n",
     "the_dir = 'Data/wowah/WoWAH/'   \n",
     "\n",
-    "match_string = '.*\\\"\\d+,\\s(.*),\\s*(\\d*),\\s*(\\d*),\\s*(\\d*),\\s*(\\d*),\\s*([\\w\\s]+),\\s*([\\w\\s]+),\\s*([\\w].*),[\\s\\w]*,.*\\\",.*$'\n",
+    "match_string = '.*\\\"\\d+,\\s(.*),\\s*(\\d*),\\s*(\\d*),\\s*(\\d*),\\s*(\\d*),\\s*([A-Z][\\w\\s]+),\\s*([A-Z][\\w\\s]+),\\s*([\\w].*),[\\s\\w]*,.*\\\",.*$'\n",
     "\n",
     "# [1] = \"0, 03/30/06 23:59:49, 1,10772, , 1, Orc, Warrior, Orgrimmar, , 0\",\n",
     "#       \"0, 01/10/09 00:03:50, 1,55517, , 3, Orc, Warlock, Orgrimmar, WARLOCK, 0\", -- [1]\n",
@@ -200,7 +200,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_line = char + ',' + level + ',' + race + ',' + charclass + ',' + zone +  ',' + guild + ',' + timestamp + ',' + '' +'\\n'\n",
@@ -228,7 +230,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from random import shuffle\n",
@@ -239,7 +243,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filelist = sorted(filelist)\n",
